--- a/Views/ChuyenNganhPage.xaml
+++ b/Views/ChuyenNganhPage.xaml
@@ -10,13 +10,12 @@
 
     <Grid>
         <Label Foreground="DarkSlateGray" FontWeight="Bold" FontSize="32" Margin="10,10,10,375">Chuyên Ngành Đào Tạo</Label>
-        <TextBox Padding="2" BorderThickness="2" Background="Transparent" x:Name="txtSearch" FontSize="20" Width="300" Height="Auto" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,21,80,0"/>
-        <Button Click="Search_Click" Name="Search" Width="70" Height="35" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#3e638f" BorderThickness="0" Margin="0,21,10,0">
-            <StackPanel>
-                <Image Source="../Images/search.png" Width="28" />
-            </StackPanel>
-        </Button>
-        <ListView SelectionChanged="ListView_SelectionChanged" Margin="10,100,10,80" Name="listView" ItemContainerStyle="{StaticResource alternatingStyle}" AlternationCount="2">
+        <TextBox TextChanged="TxtSearch_TextChanged" Padding="30, 2, 2, 2" BorderThickness="2" x:Name="txtSearch" FontSize="20" Width="400" Height="Auto" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,21,10,0">
+            <TextBox.Background>
+                <ImageBrush ImageSource="../Images/search.png" AlignmentX="Left" Stretch="Uniform"/>
+            </TextBox.Background>
+        </TextBox>
+        <ListView SelectionChanged="ListView_SelectionChanged" Margin="10,80,10,80" Name="listView" ItemContainerStyle="{StaticResource alternatingStyle}" AlternationCount="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="Auto">
@@ -58,24 +57,5 @@
         <Button Click="EditBtn_Click" Name="EditBtn" IsEnabled="False" FontWeight="Bold" Foreground="Blue" FontSize="16" Background="CadetBlue" Width="100" Height="35" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,120,30">Sửa</Button>
         <Button Click="DelBtn_Click" Name="DelBtn" IsEnabled="False" FontWeight="Bold" Foreground="Red" FontSize="16" Background="Wheat" Width="100" Height="35" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,30">Xóa</Button>
         <Rectangle Height="20" Margin="0,420,0,0" VerticalAlignment="Bottom" Fill="#3e638f"/>
-        <Expander Name="expander" Expanded="Expander_Expanded" Collapsed="Expander_Collapsed" FontWeight="Bold" Width="380" Height="30"  FontSize="16" Header="Bộ Lọc" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 60">
-            <Grid Background="#FFA7B3BD"  Margin="10,4,0,0">
-                <TextBox Padding="2" Name="txtFilter"  Margin="10, 10, 0, 0" Width="250" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <Button Click="Filter_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 10, 60, 0" Name="Filter" Width="40" Height="30" Background="#3e638f" BorderThickness="0">
-                    <StackPanel>
-                        <Image Source="../Images/filters.png" Width="24" />
-                    </StackPanel>
-                </Button>
-                <Button Click="Clear_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,10,10,0" Name="Clear" Width="40" Height="30" Background="#3e638f" BorderThickness="0">
-                    <StackPanel>
-                        <Image Source="../Images/clear.png" Width="20" />
-                    </StackPanel>
-                </Button>
-                <TextBlock Text="Nhóm Ngành:" HorizontalAlignment="Left" Margin="10,52,0,10"/>
-                <TextBox Padding="2" Height="30" Margin="129,50,149,11" />
-                <TextBlock Text="-" Margin="219,50,100,14"  FontWeight="Bold" Width="49" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
-                <TextBox Padding="2" Height="30" Margin="268,50,10,11" />
-            </Grid>
-        </Expander>
     </Grid>
 </Page>
