--- a/Views/DetailWindow.xaml
+++ b/Views/DetailWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DSSProject.Views"
         mc:Ignorable="d"
         Title="Thông tin Trường đại học" Height="Auto" Width="Auto" ResizeMode="NoResize">
     <Window.Resources>
@@ -25,12 +24,12 @@
         <TextBox x:Key="ChuyenNganhTB" x:Shared="False" FontSize="20" Margin="0, 5, 0, 5" IsReadOnly="True" Text="{Binding Mode=OneWay}"/>
     </Window.Resources>
 
-    <Grid>
+    <Grid Background="LightGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1.5*" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
-        <GroupBox Grid.Column="0" FontSize="16" Foreground="White" FontWeight="Bold" Margin="10" Header="Thông tin trường Đại học" Template="{StaticResource TintedGroupBox}">
+        <GroupBox Grid.Column="0" FontSize="16" Foreground="White" FontWeight="Bold" Margin="10, 10, 0, 10" Header="Thông tin trường Đại học" Template="{StaticResource TintedGroupBox}">
             <StackPanel Margin="10">
                 <TextBlock Margin="0, 5, 0, 5" Foreground="DarkBlue" Text="Mã Trường:"/>
                 <TextBox FontSize="20" Margin="0, 5, 0, 5" Name="txtMaTruong" IsReadOnly="True"/>
@@ -46,7 +45,7 @@
                 <TextBox FontSize="20" Margin="0, 5, 0, 5" Name="txtDVChuQuan" IsReadOnly="True"/>
             </StackPanel>
         </GroupBox>
-        <GroupBox Grid.Column="1" FontSize="16" Foreground="White" FontWeight="Bold" Margin="10" Header="Số lượng tuyển sinh các ngành" Template="{StaticResource TintedGroupBox}">
+        <GroupBox Grid.Column="1" FontSize="16" Foreground="White" FontWeight="Bold" Margin="10" Header="Chỉ Tiêu tuyển sinh các ngành" Template="{StaticResource TintedGroupBox}">
             <StackPanel Name="TuyenSinhContainer" Margin="10">
                 <StackPanel Margin="0, 0, 0, 10" Orientation="Horizontal">
                     <TextBlock Margin="0, 5, 0, 5" Foreground="DarkBlue" Text="Năm Đào Tạo:"/>
