--- a/Views/CoSoPage.xaml
+++ b/Views/CoSoPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:DSSProject.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Danh sách Cơ Sở Đào Tạo">
+      Title="Danh sách Cơ Sở Đào Tạo" Loaded="Page_Loaded">
 
     <Grid>
         <Label Foreground="DarkSlateGray" FontWeight="Bold" FontSize="32" Margin="10,10,10,375">Cơ Sở Đào Tạo</Label>
